--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   app:
     build:
       args:
-        user: user
+        user: samara
         uid: 1000
       context: ./
       dockerfile: Dockerfile
@@ -13,13 +13,12 @@ services:
     restart: unless-stopped
     container_name: epic-app
     expose:
-      - "5001"
+      - "9000"
     ports:
-      - 5001:5001
+      - 9000:9000
     working_dir: /var/www/
     volumes:
       - ./:/var/www
-      - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - default
 
@@ -40,6 +39,17 @@ services:
     networks:
       - default
 
+  nginx:
+    image: nginx:1.17-alpine
+    container_name: epic-nginx
+    restart: unless-stopped
+    ports:
+      - 8000:8000
+    volumes:
+      - ./:/var/www
+      - ./docker/nginx:/etc/nginx/conf.d
+    networks:
+      - default
 
 networks:
   default:
