--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -17,4 +17,7 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
     }
+    location /metrics {
+        stub_status on;
+    }
 }
